Ajustes na Arquitetura do  estrutura do projeto, implementação de metodos base e divisão de resposabilidades.

--- a/AgendaApp.API/appsettings.json
+++ b/AgendaApp.API/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  {
+    "ConnectionStrings": {
+      "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BdAgendaApp;Integrated Security=True;"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
+
 }
