Configuração do serviço de injeção de dependencia

--- a/AgendaApp.API/appsettingsDev.json
+++ b/AgendaApp.API/appsettingsDev.json
@@ -1,6 +1,6 @@
 {
   {
-    //alterar para string de conexao de produção
+    //local
     "ConnectionStrings": {
       "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BdAgendaApp;Integrated Security=True;"
     },
