--- a/AgendaApp.API/appsettingsDev.json
+++ b/AgendaApp.API/appsettingsDev.json
@@ -2,7 +2,7 @@
 
   //local
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BdAgendaApp;Integrated Security=True;"
+    "DefaultConnection": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
   },
   "Logging": {
     "LogLevel": {
