--- a/AgendaApp.Presentation/appSettingsDev.json
+++ b/AgendaApp.Presentation/appSettingsDev.json
@@ -1,7 +1,7 @@
 {
   //alterar para string de conexao de produção
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BdAgendaApp;Integrated Security=True;"
+    "DefaultConnection": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
   },
   "Logging": {
     "LogLevel": {
