--- a/TSmartClinic.API.GatewayOcelot/appsettings.Development.json
+++ b/TSmartClinic.API.GatewayOcelot/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
+  "TokenSettings": {
+    "Issuer": "AgendaApp",
+    "Audience": "*",
+    "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
+    "ExpirationInMinutes": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
