--- a/TSmartClinic.API/appsettingsDev.json
+++ b/TSmartClinic.API/appsettingsDev.json
@@ -10,8 +10,8 @@
       "Microsoft.AspNetCore": "Warning"
     },
     "TokenSettings": {
-      "Issuer": "AgendaApp",
-      "Audience": "*",
+      "Issuer": "TSmartIssuer",
+      "Audience": "TSmartAudience",
       "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
       "ExpirationInMinutes": 30
     }
