--- a/TSmartClinic.API.GatewayOcelot/appsettings.json
+++ b/TSmartClinic.API.GatewayOcelot/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenSettings": {
+    "Issuer": "TSmartIssuer",
+    "Audience": "*",
+    "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
+    "ExpirationInMinutes": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
