--- a/TSmartClinic.API/appsettingsDev.json
+++ b/TSmartClinic.API/appsettingsDev.json
@@ -2,7 +2,7 @@
 
   //local
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
+    "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
     },
     "TokenSettings": {
       "Issuer": "TSmartIssuer",
-      "Audience": "TSmartAudience",
+      "Audience": "*",
       "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
       "ExpirationInMinutes": 30
     }
