--- a/TSmartClinic.Api.Auth/appsettings.Development.json
+++ b/TSmartClinic.Api.Auth/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
+  },
+  "TokenSettings": {
+    "Issuer": "TSmartIssuer",
+    "Audience": "*",
+    "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
+    "ExpirationInMinutes": 30
   }
 }
