--- a/TSmartClinic.Api.Auth/appsettings.json
+++ b/TSmartClinic.Api.Auth/appsettings.json
@@ -1,19 +1,11 @@
 {
-  //alterar para string de conexao de produção
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
+    "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    },
-    "TokenSettings": {
-      "Issuer": "TSmartIssuer",
-      "Audience": "TSmartAudience",
-      "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
-      "ExpirationInMinutes": 30
-    }
-  },
-  "AllowedHosts": "*"
+  "TokenSettings": {
+    "Issuer": "TSmartIssuer",
+    "Audience": "*",
+    "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
+    "ExpirationInMinutes": 30
+  }
 }
