--- a/TSmartClinic.Api.Auth/appsettings.json
+++ b/TSmartClinic.Api.Auth/appsettings.json
@@ -1,6 +1,7 @@
+
 {
   "ConnectionStrings": {
-    "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
+    "PeopleNetDB": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
   },
   "TokenSettings": {
     "Issuer": "TSmartIssuer",
