--- a/TSmartClinic.Api.Auth/appsettingsDev.json
+++ b/TSmartClinic.Api.Auth/appsettingsDev.json
@@ -1,13 +1,12 @@
+
 {
-  //alterar para string de conexao de produção
-  {
-    "ConnectionStrings": {
-      "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
-    },
-    "TokenSettings": {
-      "Issuer": "TSmartIssuer",
-      "Audience": "*",
-      "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
-      "ExpirationInMinutes": 30
-    }
+  "ConnectionStrings": {
+    "PeopleNetDB": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
+  },
+  "TokenSettings": {
+    "Issuer": "PeopleNetSST",
+    "Audience": "*",
+    "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
+    "ExpirationInMinutes": 30
   }
+}
