--- a/TSmartClinic.Api.Auth/appsettings.json
+++ b/TSmartClinic.Api.Auth/appsettings.json
@@ -1,12 +1,13 @@
 
 {
   "ConnectionStrings": {
-    "PeopleNetDB": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
+    "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
   },
   "TokenSettings": {
+    "SecretKey": "MinhaChaveSuperSecretaCom32Caracteres!!",
     "Issuer": "TSmartIssuer",
     "Audience": "*",
-    "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
+    "SecretKey": "MinhaChaveSuperSecreta1234567890",
     "ExpirationInMinutes": 30
   }
 }
