Autenticação JWT parte 2

--- a/TSmartClinic.Api.Auth/appsettings.json
+++ b/TSmartClinic.Api.Auth/appsettings.json
@@ -1,4 +1,3 @@
-
 {
   "ConnectionStrings": {
     "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
@@ -8,5 +7,8 @@
     "Issuer": "TSmartIssuer",
     "Audience": "*",
     "ExpirationInMinutes": 30
+  },
+  "CryptoSettings": {
+    "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
   }
 }
