--- a/TSmartClinic.API/appsettings.json
+++ b/TSmartClinic.API/appsettings.json
@@ -13,7 +13,11 @@
       "Audience": "*",
       "SecretKey": "85C7989FTSmartClinicApplication5B8D2AE68DFC",
       "ExpirationInMinutes": 30
+    },
+    "CryptoSettings": {
+      "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
     }
+
   },
   "AllowedHosts": "*"
 }
