--- a/TSmartClinic.API/appsettingsDev.json
+++ b/TSmartClinic.API/appsettingsDev.json
@@ -16,5 +16,8 @@
       "ExpirationInMinutes": 30
     }
   },
+  "CryptoSettings": {
+    "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
+  },
   "AllowedHosts": "*"
 }
