--- a/TSmartClinic.Api.Auth/appsettings.Development.json
+++ b/TSmartClinic.Api.Auth/appsettings.Development.json
@@ -15,5 +15,8 @@
     "SecretKey": "85C7989FTSmartClinicApplication5B8D2AE68DFC",
     "ExpirationInMinutes": 30
   },
+  "CryptoSettings": {
+    "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
+  },
   "AllowedHosts": "*"
 }
