--- a/TSmartClinic.Presentation/appSettingsDev.json
+++ b/TSmartClinic.Presentation/appSettingsDev.json
@@ -3,17 +3,24 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "TokenSettings": {
-      "Issuer": "TSmartIssuer",
-      "Audience": "TSmartAudience",
-      "SecretKey": "c2lkZWluZm9fcGVvcGxlbmV0X3NhdWRlX29jdXBhY2lvbmFs",
-      "ExpirationInMinutes": 30
     }
   },
+
+  "TokenSettings": {
+    "Issuer": "TSmartIssuer",
+    "Audience": "TSmartAudience",
+    "SecretKey": "85C7989FTSmartClinicApplication5B8D2AE68DFC",
+    "ExpirationInMinutes": 30
+  },
+
+  "CryptoSettings": {
+    "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
+  },
+
   "AllowedHosts": "*"
 }
