--- a/TSmartClinic.API.GatewayOcelot/appsettings.Development.json
+++ b/TSmartClinic.API.GatewayOcelot/appsettings.Development.json
@@ -11,5 +11,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "UrlApiSettings": {
+    "ApiGateway": "http://localhost:5049"
+  },
   "AllowedHosts": "*"
 }
