--- a/TSmartClinic.Presentation/appsettings.Stage.json
+++ b/TSmartClinic.Presentation/appsettings.Stage.json
@@ -1,5 +1,5 @@
 {
   "UrlApiSettings": {
-    "ApiGateway": "http://hmg-peoplenet.sistemapeoplenet.com.br:8001"
+    "ApiGateway": "http://localhost:5049"
   }
 }
