--- a/TSmartClinic.Presentation/appsettings.development.json
+++ b/TSmartClinic.Presentation/appsettings.development.json
@@ -21,6 +21,8 @@
   "CryptoSettings": {
     "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
   },
-
+  "UrlApiSettings": {
+    "ApiGateway": "http://localhost:5049"
+  },
   "AllowedHosts": "*"
 }
