--- a/TSmartClinic.Api.Auth/appsettings.json
+++ b/TSmartClinic.Api.Auth/appsettings.json
@@ -1,14 +1,25 @@
 {
+  //alterar para string de conexao de produção
   "ConnectionStrings": {
     "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
   },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "TokenSettings": {
-    "SecretKey": "85C7989FTSmartClinicApplication5B8D2AE68DFC",
     "Issuer": "TSmartIssuer",
     "Audience": "*",
+    "SecretKey": "85C7989FTSmartClinicApplication5B8D2AE68DFC",
     "ExpirationInMinutes": 30
   },
   "CryptoSettings": {
     "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
-  }
+  },
+  "BaseUrls": {
+    "Auth": "http://localhost:5296/api/auth"
+  },
+  "AllowedHosts": "*"
 }
