--- a/TSmartClinic.Api.Auth/appsettings.Development.json
+++ b/TSmartClinic.Api.Auth/appsettings.Development.json
@@ -18,5 +18,8 @@
   "CryptoSettings": {
     "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
   },
+  "BaseUrls": {
+    "Auth": "http://localhost:5296/api/auth"
+  },
   "AllowedHosts": "*"
 }
