--- a/TSmartClinic.Api.Auth/TSmartClinic.Api.Auth.csproj
+++ b/TSmartClinic.Api.Auth/TSmartClinic.Api.Auth.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\TSmartClinic.Data\TSmartClinic.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
