Implementaçaõ doio service de envio se dados por email na criaçaõ de usuario.

--- a/TSmartClinic.API/appsettings.json
+++ b/TSmartClinic.API/appsettings.json
@@ -19,5 +19,16 @@
     }
 
   },
+
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "UseDefaultCredentials": false,
+    "UserName": "software.tsmartclinic@gmail.com",
+    "Password": "sjsh kipn xhyp zpjd",
+    "From": "software.tsmartclinic@gmail.com"
+  },
+
   "AllowedHosts": "*"
 }
