--- a/TSmartClinic.API/appsettingsDev.json
+++ b/TSmartClinic.API/appsettingsDev.json
@@ -1,23 +1,39 @@
 {
-
-  //local
   "ConnectionStrings": {
-    "TSmartClinic": "Data Source=sistema-agenda.database.windows.net;Initial Catalog=sistemaAgendaDB;User ID=adminsistemaagenda;Password=Be15@Ju08#Ti86#Ge86*;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;"
+    "TSmartClinic": "Data Source=...;Initial Catalog=...;User ID=...;Password=...;Encrypt=True;Trust Server Certificate=False;"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "TokenSettings": {
-      "Issuer": "TSmartIssuer",
-      "Audience": "*",
-      "SecretKey": "85C7989FTSmartClinicApplication5B8D2AE68DFC",
-      "ExpirationInMinutes": 30
     }
   },
+
+  "TokenSettings": {
+    "Issuer": "TSmartIssuer",
+    "Audience": "*",
+    "SecretKey": "85C7989FTSmartClinicApplication5B8D2AE68DFC",
+    "ExpirationInMinutes": 30
+  },
+
   "CryptoSettings": {
     "Chave": "85C7989FTSmartClinicCrypto5B8D2AE68DFC"
   },
+
+  "FrontSettings": {
+    "BaseUrl": "http://localhost:5041"
+  },
+
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "UseDefaultCredentials": false,
+    "UserName": "software.tsmartclinic@gmail.com",
+    "Password": "sjsh kipn xhyp zpjd",
+    "From": "software.tsmartclinic@gmail.com"
+  },
+
   "AllowedHosts": "*"
 }
